[project]
name = "FastAPI-Tutorial"
version = "0.1.0"
description = "Simple FastAPI Tutorial Project with Taskipy, Venv and Freeze"
authors = [
  { name="Kim Donghyun", email="hyungus723@gmail.com" }
]
requires-python = ">=3.11"

[tool.taskipy.tasks]
run = "uvicorn src.main:app --reload" # task run
test = "pytest -q" # task test
lint = "ruff check ." # task lint
format = "ruff format ." # task format

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"